# cr100

./: .gitignore  .pre-commit-config.yaml  5x9.h  CMakeLists.txt  Makefile  README.md  atkbd.pio  chargen.c  chargen.h  cr100.termcap  cr100.terminfo  keyboard.c  keyboard.h  pinout.h  run-gdb.sh  vga_660_480_60.pio  vgamode.py  vt.c  vt.h
.github/workflows/: build.yml
hl-vt100/: .gitignore  Makefile  README.md  run_tests.sh  setup.py  vt_dump.py  vt_test.py
hl-vt100/doc/: vt100_emulator.3
hl-vt100/example/: parser.c  top.c  top.py
hl-vt100/src/: hl_vt100.c  hl_vt100.h  lw_terminal_parser.c  lw_terminal_parser.h  lw_terminal_vt100.c  lw_terminal_vt100.h  test.c  vt100_module.c
mkfont/: 5x9.bdf  mkfont.py
mkfont/adafruit_bitmap_font/: __init__.py  bdf.py  bitmap_font.py  glyph_cache.py  ttf.py
